Blue-Green/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-app-v1
spec:
  selector:
    app: bluegreen-app
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
