Blue-Green/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-app-v2
spec:
  selector:
    app: bluegreen-app
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
