Blue-Green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: bluegreen-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluegreen-app-v1
                port:
                  number: 80
          
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: bluegreen-app-v1
                port:
                  number: 80
